--- a/soufun_s1/scrapy.cfg
+++ b/soufun_s1/scrapy.cfg
@@ -6,6 +6,6 @@
 [settings]
 default = soufun_s1.settings
 
-[deploy:soufunper]
+[deploy:soufun_s1]
 url = http://localhost:6800/
 project = soufun_s1
